# atask

./: .env.example  .gitignore  .golangci.yml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  migrate_things.py  probe  sqlc.yaml
atask-app/: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  Package.resolved  Package.swift  project.yml
atask-app/Sources/: ataskApp.swift
atask-app/Sources/Helpers/: DateFormatting.swift
atask-app/Sources/Models/: AreaModel.swift  ChecklistItemModel.swift  ProjectModel.swift  SectionModel.swift  TagModel.swift  TaskModel.swift
atask-app/Sources/Resources/: Info.plist
atask-app/Sources/Store/: LocalDatabase.swift  TaskStore.swift
atask-app/Sources/Sync/: APIClient.swift  SSEClient.swift  SyncEngine.swift
atask-app/Sources/Theme/: Colors.swift  Spacing.swift  Typography.swift
atask-app/Sources/Views/: ContentView.swift
atask-app/Sources/Views/Detail/: ChecklistSection.swift  TaskDetailView.swift
atask-app/Sources/Views/Overlays/: CommandPaletteView.swift  LoginView.swift  SettingsView.swift
atask-app/Sources/Views/Pickers/: ProjectPicker.swift  TagPicker.swift  WhenPicker.swift
atask-app/Sources/Views/Sidebar/: SidebarView.swift
atask-app/Sources/Views/TaskList/: NewTaskRow.swift  TaskInlineEditor.swift
atask-app/Tests/: DateFormattingTests.swift  TaskStoreTests.swift
atask-app/assets/: theme.css
atask-app/e2e/: package-lock.json  package.json  playwright.config.ts
atask-app/e2e/tests/: helpers.ts  keyboard-workflows.spec.ts  missing-flows.spec.ts  sse-events.spec.ts  tag-flow.spec.ts  task-lifecycle.spec.ts  today-view.spec.ts
atask-app/src/: main.rs
atask-app/src/api/: client.rs  mod.rs  sse.rs  types.rs
atask-app/src/components/: activity_entry.rs  button.rs  checkbox.rs  checklist_item.rs  command_palette.rs  confirm_dialog.rs  date_picker.rs  mod.rs  new_task_inline.rs  project_picker.rs  schedule_picker.rs  section_header.rs  sidebar.rs  tag_picker.rs  tag_pill.rs  task_detail.rs  task_item.rs  task_meta.rs  text_input.rs  toast.rs  toolbar.rs
atask-app/src/state/: app.rs  auth.rs  command.rs  credentials.rs  date_fmt.rs  mod.rs  navigation.rs  projects.rs  tasks.rs
atask-app/src/views/: inbox.rs  logbook.rs  login.rs  mod.rs  project.rs  someday.rs  today.rs  upcoming.rs
atask-app/tests/: api_integration.rs
atask-v4/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  tsconfig.playwright.json  vitest.config.ts  wdio.conf.ts
atask-v4/.storybook/: main.ts  preview.ts
atask-v4/src/: App.tsx  main.tsx  theme.css  types.ts
atask-v4/src-tauri/: Cargo.toml  tauri.conf.json
atask-v4/src-tauri/capabilities/: default.json
atask-v4/src-tauri/icons/: icon.icns
atask-v4/src-tauri/src/: auth.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  patch_body.rs  sync.rs  sync_commands.rs  tests.rs
atask-v4/src-tauri/src/migrations/: 001_schema.sql  003_activities.sql  004_locations.sql  005_project_tags.sql  006_task_links.sql
cmd/atask/: admin_commands.go  admin_commands_test.go  main.go  main_test.go  reassign_api_keys_test.go
docs/design_specs/: CLAUDE.md  DESIGN.md  atask-screens-validation.html
docs/design_specs_v2/: CLAUDE.md  DESIGN.md  MEASUREMENTS.md  atask-screens-validation.html
e2e/: playwright.config.ts
e2e/tests/: checklist-counts.spec.ts  full-coverage.spec.ts  helpers.ts  time-slot.spec.ts
internal/api/: activities.go  admin.go  admin_csrf.go  admin_csrf_test.go  admin_session.go  admin_test.go  areas.go  areas_test.go  auth.go  auth_test.go  checklist.go  decode_integration_test.go  events.go  handler_regression_test.go  helpers.go  invite.go  invite_admin_scope_test.go  invite_test.go  locations.go  middleware.go  middleware_scope_test.go  middleware_test.go  patch_test.go  pb_router_bridge_test.go  projects.go  response.go  response_test.go  router.go  routes.go  sections.go  sync.go  sync_test.go  tags.go  tasks.go  test_helpers_test.go  (+2 more)
(+291 files in other folders)
