[package]
name = "atask"
version = "0.1.0"
edition = "2024"

# Optimize deps even in dev builds (faster UI, reasonable compile times)
[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
